--- a/.github/auto_assign_config.yml
+++ b/.github/auto_assign_config.yml
@@ -12,3 +12,7 @@
  # 지정한 숫자만큼 리뷰어가 등록
  # 0으로 설정하면 모든 리뷰어가 지정 (default: 0)
  numberOfReviewers: 2
+
+ # A list of assignees, overrides reviewers if set
+ assignees:
+   - k3255
