--- a/.github/auto_assign_config.yml
+++ b/.github/auto_assign_config.yml
@@ -15,4 +15,9 @@
 
  # A list of assignees, overrides reviewers if set
  assignees:
+   - djpark0402
    - k3255
+# A number of assignees to add to the pull request
+# Set to 0 to add all of the assignees.
+# Uses numberOfReviewers if unset.
+ numberOfAssignees: 2
