--- a/.github/workflows/pr_auto_assign.yml
+++ b/.github/workflows/pr_auto_assign.yml
@@ -1,17 +1,13 @@
 name: Auto Assign
 on:
-  issues:
-    types: [opened, edited, labeled, unlabeled]
   pull_request:
-    types: [opened, edited, labeled, unlabeled, ready_for_review]
+    types: [opened, ready_for_review]
+
 jobs:
-  run:
+  add-reviews:
     runs-on: ubuntu-latest
     steps:
-      - uses: wow-actions/auto-assign@v3
+      - uses: kentaro-m/auto-assign-action@v2.0.0
         with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          reviewers: |
-            djpark0402
-            k3255
-          assignees: k3255, ss40760000
+          configuration-path: '.github/auto_assign_config.yml' 
+          # .github/auto_assign.yml 이면 따로 설정할 필요가 없음
