--- a/.github/workflows/pr_auto_assign.yml
+++ b/.github/workflows/pr_auto_assign.yml
@@ -2,10 +2,7 @@ name: Auto Assign
 on:
   pull_request:
     types: [opened, ready_for_review]
-permissions:
-  contents: read
-  checks: write
-  pull-requests: write
+permissions: write-all
   
 jobs:
   add-reviews:
