--- a/.github/workflows/pr_auto_assign.yml
+++ b/.github/workflows/pr_auto_assign.yml
@@ -2,12 +2,12 @@ name: Auto Assign
 on:
   pull_request:
     types: [opened, ready_for_review]
-permissions: write-all
+permissions:
+  contents: read
+  pull-requests: write
   
 jobs:
   add-reviews:
     runs-on: ubuntu-latest
     steps:
       - uses: kentaro-m/auto-assign-action@v2.0.0
-        with:
-          repo-token: '${{ secrets.GITHUB_TOKEN }}'
