--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -2,7 +2,7 @@
  addReviewers: true
 
  # assignees를 설정할지에 대한 true or false (author는 pr open한 user)
- addAssignees: true
+ addAssignees: author
 
  # reviewers로 지정할 대상 (GitHub user name)
  reviewers:
