--- a/.github/workflows/pr_auto_assign.yml
+++ b/.github/workflows/pr_auto_assign.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           script: |
             const assignees = ['djpark0402', 'k3255']; // 자동으로 할당할 사용자
-            await github.issues.addAssignees({
+            await github.rest.issues.addAssignees({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.payload.pull_request.number,
