--- a/.github/workflows/pr_auto_assign.yml
+++ b/.github/workflows/pr_auto_assign.yml
@@ -2,7 +2,12 @@ name: PR assignment
 on:
     pull_request:
         types: [opened, edited, synchronize, reopened, ready_for_review]
-
+        
+permissions:
+  contents: read
+  issues: write
+  pull-requests: write
+  
 jobs:
   auto-assign:
     runs-on: ubuntu-latest
