--- a/.github/workflows/pr_auto_assign.yml
+++ b/.github/workflows/pr_auto_assign.yml
@@ -1,6 +1,6 @@
 name: PR assignment
 on:
-    pull_request:
+    pull_request_target::
         types: [opened, edited, synchronize, reopened, ready_for_review]
         
 permissions:
